--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "lab06exerc03",
   "version": "1.0.0",
+  "description": "",
+  "type": "module",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node ./src/index.js"
+    "dev": "node --experimental-modules --es-module-specifier-resolution=node ./src/index.js"
   },
   "dependencies": {
-    
-  }
+    "cross-fetch": "^3.1.5",
+    "csv-stringify": "^6.2.0",
+    "csv-write-stream": "^2.0.0",
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0"
+  },
+  "devDependencies": {}
 }
