--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "csv-write-stream": "^2.0.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0"
+    "graphql-request": "^5.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {}
 }
